--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 flake8-import-order
-        pip install -e .
+        pip install -e ".[test]"
 
     - name: Run flake8
       run: |
