--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,7 @@ jobs:
         pytest tests/
 
     - name: Login to DockerHub
+      if: github.event_name == 'push'
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -45,10 +46,12 @@ jobs:
 
 
     - name: Extract branch name
+      if: github.event_name == 'push'
       shell: bash
       run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
 
     - name: Build and push Docker image
+      if: github.event_name == 'push'
       uses: docker/build-push-action@v5
       with:
         context: .
