Add asset to create catalogs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "dagster-postgres",
     "dagster-aws",
     "s3fs",
+    "intake-esm==2024.2.6",
     "xarray[complete]",
     "zarr",
     "beautifulsoup4"
